[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Buttons/Menu_Button_Tempate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/UI/EquipMenu.gd" type="Script" id=4]
[ext_resource path="res://Themes/50Theme.tres" type="Theme" id=7]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=8]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=9]
[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=11]

[node name="EquipMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="FullMenu"]
visible = false
margin_right = 1280.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 1

[node name="Header" type="HBoxContainer" parent="FullMenu"]
margin_right = 1280.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="LeftMargin2" type="Label" parent="FullMenu/Header"]
margin_right = 20.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="MenuName" type="Label" parent="FullMenu/Header"]
margin_left = 24.0
margin_right = 431.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 7 )
text = "Equip Menu"
align = 1
valign = 1
uppercase = true

[node name="CharName" type="Label" parent="FullMenu/Header"]
margin_left = 435.0
margin_right = 845.0
margin_bottom = 82.0
rect_min_size = Vector2( 410, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 11 )
align = 1
valign = 1
uppercase = true

[node name="Exit" parent="FullMenu/Header" instance=ExtResource( 1 )]
margin_left = 849.0
margin_right = 1256.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="RightMargin2" type="Label" parent="FullMenu/Header"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="TabsContainer" type="HBoxContainer" parent="FullMenu"]
margin_top = 86.0
margin_right = 1280.0
margin_bottom = 703.0
size_flags_vertical = 3

[node name="LeftMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_right = 20.0
margin_bottom = 617.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="CharacterPanel" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 24.0
margin_right = 224.0
margin_bottom = 617.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CharacterPanel"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="Char1" parent="FullMenu/TabsContainer/CharacterPanel" instance=ExtResource( 1 )]
margin_top = 104.0
margin_right = 200.0
margin_bottom = 179.0
rect_min_size = Vector2( 200, 75 )
size_flags_vertical = 1

[node name="Char2" parent="FullMenu/TabsContainer/CharacterPanel" instance=ExtResource( 1 )]
visible = false
margin_top = 183.0
margin_right = 200.0
margin_bottom = 258.0
rect_min_size = Vector2( 200, 75 )
size_flags_vertical = 1

[node name="Char3" parent="FullMenu/TabsContainer/CharacterPanel" instance=ExtResource( 1 )]
visible = false
margin_top = 183.0
margin_right = 200.0
margin_bottom = 258.0
rect_min_size = Vector2( 200, 75 )
size_flags_vertical = 1

[node name="Char4" parent="FullMenu/TabsContainer/CharacterPanel" instance=ExtResource( 1 )]
visible = false
margin_top = 183.0
margin_right = 200.0
margin_bottom = 258.0
rect_min_size = Vector2( 200, 75 )
size_flags_vertical = 1

[node name="EquipSlots" type="HBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 228.0
margin_right = 792.0
margin_bottom = 617.0
rect_min_size = Vector2( 560, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="LeftVBox" type="VBoxContainer" parent="FullMenu/TabsContainer/EquipSlots"]
margin_right = 280.0
margin_bottom = 617.0
rect_min_size = Vector2( 280, 0 )
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="Equip_Detail" type="Control" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox"]
margin_right = 280.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="HBoxContainer" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox/Equip_Detail"]
margin_right = 280.0
margin_bottom = 86.0
rect_min_size = Vector2( 280, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot_name" type="Label" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox/Equip_Detail/Panel"]
margin_right = 114.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Slot Name"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Label" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox/Equip_Detail/Panel"]
margin_left = 118.0
margin_right = 232.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item Icon"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox/Equip_Detail/Panel"]
margin_left = 236.0
margin_right = 279.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Key"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftVBox2" type="VBoxContainer" parent="FullMenu/TabsContainer/EquipSlots"]
margin_left = 284.0
margin_right = 564.0
margin_bottom = 617.0
rect_min_size = Vector2( 280, 0 )
theme = ExtResource( 2 )

[node name="Equip_Detail" type="Control" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox2"]
margin_right = 280.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="HBoxContainer" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox2/Equip_Detail"]
margin_right = 269.0
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot_name" type="Label" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox2/Equip_Detail/Panel"]
margin_right = 109.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Slot Name"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Label" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox2/Equip_Detail/Panel"]
margin_left = 113.0
margin_right = 222.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Item Icon"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="FullMenu/TabsContainer/EquipSlots/LeftVBox2/Equip_Detail/Panel"]
margin_left = 226.0
margin_right = 269.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Key"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 796.0
margin_right = 806.0
margin_bottom = 617.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="EquipDetail" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 810.0
margin_right = 1256.0
margin_bottom = 617.0
rect_min_size = Vector2( 325, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Inspector_Container" type="VBoxContainer" parent="FullMenu/TabsContainer/EquipDetail"]
margin_right = 446.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemType" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
visible = false
margin_right = 325.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 11 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ItemName" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
margin_right = 446.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
theme = ExtResource( 11 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
margin_top = 104.0
margin_right = 446.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 4
scroll_horizontal_enabled = false

[node name="ItemDescription" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/ScrollContainer"]
margin_right = 446.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
autowrap = true

[node name="SpaceBuffer" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
visible = false
margin_left = 162.0
margin_top = 237.0
margin_right = 162.0
margin_bottom = 271.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 4
theme = ExtResource( 2 )

[node name="ItemStats" type="HBoxContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
margin_top = 308.0
margin_right = 446.0
margin_bottom = 508.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="StatsContainer" type="ScrollContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/ItemStats"]
margin_right = 446.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/ItemStats/StatsContainer"]
margin_right = 446.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 8 )

[node name="HBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
margin_top = 512.0
margin_right = 446.0
margin_bottom = 617.0
rect_min_size = Vector2( 0, 105 )
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Swap" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 446.0
margin_bottom = 50.0

[node name="Unequip" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 54.0
margin_right = 446.0
margin_bottom = 105.0

[node name="LabelBuffer" type="Label" parent="FullMenu/TabsContainer/EquipDetail"]
visible = false
margin_top = 621.0
margin_right = 446.0
margin_bottom = 635.0

[node name="Label" type="Label" parent="FullMenu/TabsContainer/EquipDetail"]
visible = false
margin_top = 639.0
margin_right = 446.0
margin_bottom = 659.0
rect_min_size = Vector2( 0, 20 )

[node name="RightMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 617.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="BottomMargin" type="Label" parent="FullMenu"]
margin_top = 707.0
margin_right = 1280.0
margin_bottom = 721.0
rect_min_size = Vector2( 0, 5 )
size_flags_horizontal = 3
size_flags_vertical = 1
[connection signal="focus_entered" from="." to="." method="_on_EquipMenu_focus_entered"]
