[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/UI/EquipMenu.gd" type="Script" id=4]
[ext_resource path="res://Icons/Button_Up_Texture.png" type="Texture" id=5]
[ext_resource path="res://Icons/Button_Pressed_Texture.png" type="Texture" id=6]
[ext_resource path="res://Themes/50Theme.tres" type="Theme" id=7]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=8]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=9]
[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=11]

[node name="SkillMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="FullMenu"]
visible = false
margin_right = 1280.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 1

[node name="Header" type="HBoxContainer" parent="FullMenu"]
margin_right = 1280.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="LeftMargin2" type="Label" parent="FullMenu/Header"]
margin_right = 20.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="MenuName" type="Label" parent="FullMenu/Header"]
margin_left = 24.0
margin_right = 516.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 7 )
text = "Quick Access"
align = 1
valign = 1
uppercase = true

[node name="CharName" type="Label" parent="FullMenu/Header"]
margin_left = 520.0
margin_right = 1002.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 11 )
valign = 1
uppercase = true

[node name="Exit" type="ColorRect" parent="FullMenu/Header"]
margin_left = 1006.0
margin_right = 1256.0
margin_bottom = 82.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource( 8 )
color = Color( 1, 1, 1, 0 )

[node name="ExitButton" type="TextureButton" parent="FullMenu/Header/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLabel" type="Label" parent="FullMenu/Header/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.39172
margin_right = 2.39172
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMargin2" type="Label" parent="FullMenu/Header"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="TabsContainer" type="HBoxContainer" parent="FullMenu"]
margin_top = 86.0
margin_right = 1280.0
margin_bottom = 702.0
size_flags_vertical = 3

[node name="LeftMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_right = 20.0
margin_bottom = 616.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="CharacterPanel" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 24.0
margin_right = 274.0
margin_bottom = 616.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="slot 1" type="ColorRect" parent="FullMenu/TabsContainer/CharacterPanel"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 4
theme = ExtResource( 8 )
color = Color( 1, 1, 1, 0 )

[node name="Button" type="TextureButton" parent="FullMenu/TabsContainer/CharacterPanel/slot 1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CharacterPanel/slot 1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.25354
margin_right = 3.25354
text = "slot 1"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot 2" type="ColorRect" parent="FullMenu/TabsContainer/CharacterPanel"]
margin_top = 104.0
margin_right = 250.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 4
theme = ExtResource( 8 )
color = Color( 1, 1, 1, 0 )

[node name="Button" type="TextureButton" parent="FullMenu/TabsContainer/CharacterPanel/slot 2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CharacterPanel/slot 2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.42474
margin_top = 3.7948
margin_right = 3.42474
margin_bottom = 3.7948
text = "slot 2"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot 3" type="ColorRect" parent="FullMenu/TabsContainer/CharacterPanel"]
margin_top = 208.0
margin_right = 250.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 4
theme = ExtResource( 8 )
color = Color( 1, 1, 1, 0 )

[node name="Button" type="TextureButton" parent="FullMenu/TabsContainer/CharacterPanel/slot 3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CharacterPanel/slot 3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "slot 3"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot 4" type="ColorRect" parent="FullMenu/TabsContainer/CharacterPanel"]
margin_top = 312.0
margin_right = 250.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 4
theme = ExtResource( 8 )
color = Color( 1, 1, 1, 0 )

[node name="Button" type="TextureButton" parent="FullMenu/TabsContainer/CharacterPanel/slot 4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CharacterPanel/slot 4"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "slot 4"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipSlots" type="HBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 278.0
margin_right = 598.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Margin" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 602.0
margin_right = 612.0
margin_bottom = 616.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="EquipDetail" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 616.0
margin_right = 1256.0
margin_bottom = 616.0
rect_min_size = Vector2( 325, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Inspector_Container" type="VBoxContainer" parent="FullMenu/TabsContainer/EquipDetail"]
margin_right = 640.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemType" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
margin_right = 640.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 11 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ItemName" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
margin_top = 116.0
margin_right = 640.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 11 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
margin_top = 232.0
margin_right = 640.0
margin_bottom = 357.0
rect_min_size = Vector2( 0, 125 )
scroll_horizontal_enabled = false

[node name="ItemDescription" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/ScrollContainer"]
margin_right = 640.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
autowrap = true

[node name="SpaceBuffer" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
visible = false
margin_left = 162.0
margin_top = 237.0
margin_right = 162.0
margin_bottom = 271.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 4
theme = ExtResource( 2 )

[node name="ItemStats" type="HBoxContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
margin_top = 361.0
margin_right = 640.0
margin_bottom = 561.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatsContainer" type="ScrollContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/ItemStats"]
margin_right = 640.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/ItemStats/StatsContainer"]
margin_right = 640.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )

[node name="HBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container"]
margin_top = 565.0
margin_right = 640.0
margin_bottom = 615.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwapButton" type="ColorRect" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer"]
visible = false
margin_right = 325.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="swapButton" type="TextureButton" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer/SwapButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer/SwapButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Swap"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnequipButton" type="ColorRect" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer"]
visible = false
margin_right = 325.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unequpButton" type="TextureButton" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer/UnequipButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer/UnequipButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Unequip"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBuffer" type="Label" parent="FullMenu/TabsContainer/EquipDetail"]
visible = false
margin_top = 495.0
margin_right = 325.0
margin_bottom = 509.0

[node name="Label" type="Label" parent="FullMenu/TabsContainer/EquipDetail"]
visible = false
margin_top = 495.0
margin_right = 325.0
margin_bottom = 515.0
rect_min_size = Vector2( 0, 20 )

[node name="RightMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 616.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="BottomMargin" type="Label" parent="FullMenu"]
margin_top = 706.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 5 )
size_flags_horizontal = 3
size_flags_vertical = 1
[connection signal="focus_entered" from="." to="." method="_on_EquipMenu_focus_entered"]
[connection signal="button_up" from="FullMenu/Header/Exit/ExitButton" to="." method="_on_ExitButton_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/CharacterPanel/slot 1/Button" to="." method="_on_Char1_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/CharacterPanel/slot 2/Button" to="." method="_on_Char2_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/CharacterPanel/slot 3/Button" to="." method="_on_Char3_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/CharacterPanel/slot 4/Button" to="." method="_on_Char4_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer/SwapButton/swapButton" to="." method="_on_swapButton_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/EquipDetail/Item_Inspector_Container/HBoxContainer/UnequipButton/unequpButton" to="." method="_on_unequpButton_button_up"]
